# fast-tortoise

./: .coveragerc  .gitignore  LICENSE  README.md  commands.py  config.py  conftest.py  main.py  models.py  pyproject.toml  runserver.bat
.github/workflows/: fastapi-tortoise.yml
app/: main.py  models.py  utils.py
app/migrations/: 0001_initial.py
app/tests/: test_main.py  test_models.py
migrations/: 0001_initial.py
tasks/: debug_task.py
tests/: test_commands.py  test_main.py
